@@ -1,3 +1,10 @@
+Tue May 17 07:51:47 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* DAnCE/Old_Config_Handlers/Process_Element.h:
+	* DAnCE/Old_Config_Handlers/Process_Element.cpp:
+
+	  Fixed unresolved symbol link error.
+
 Mon May 16 21:29:49 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* DAnCE/Old_Config_Handlers/Process_Element.cpp:
